# LTM_CPPOpenGLAPI

./: .gitignore  .gitmodules  CMakeLists.txt  LTM_CPPOpenGLAPI.cpp
ExperimentalTests/: CMakeLists.txt  CPPOGLAPI_ExperimentTestsMain.cpp
UnitTesting/GoogleTest/: CMakeLists.txt  LTM_CPPOpenGLAPI_TESTING.cpp  LTM_CPPOpenGLAPI_UNIT_TESTING.cpp
src/: LTM_CPPOpenGLAPI.cpp  assets_edit.cpp  gl_code_structure.txt  gl_control.cpp  gl_control_general.cpp  gl_control_global.cpp  gl_control_mesh.cpp  gl_input.cpp  gl_mesh_types.cpp  gl_setup.cpp  gl_values.cpp  glad.c  image_edit.cpp
src/headers/: LTM_CPPOpenGLAPIConfig.h.in  assets_edit.hpp  gl_control.hpp  gl_input.hpp  gl_mesh_types.hpp  gl_setup.hpp  gl_values.hpp  image_edit.hpp
src/shaders/: shaderFS.glsl  shaderFS_Deprecated.glsl  shaderVS.glsl
